--- a/src/pages/styles/homepage.css
+++ b/src/pages/styles/homepage.css
@@ -116,7 +116,7 @@
 
 	.homepage-title {
 		width: 100% !important;
-		margin-top: 20px;
+		margin-top: 45px;
 		order: 2;
 	}
 
